<resources>
    <string name="app_name">BG Weather</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="text_main_activity">Default text</string>

    <string name="action_settings">Settings</string>
    <string name="take_photo">Take a picture</string>
    <string name="get_from_gallery">Get image from gallery</string>
    <string name="app_sidebar_title">Background Weather</string>
    <string name="share_bar">Share</string>
    <string name="share_with">Share with...</string>
    <string name="city_code">City:</string>
    <string name="welcome_string">Welcome to the app</string>
    <string name="share_string">Check this app! It is awesome!</string>

    <string name="zip_code">Zip code</string>
    <string name="fetch_weather">Fetch data</string>
    <string name="zone_result">Fill in some field</string>
    <string name="update_location">Updating location...</string>
    <string name="save_weather">Save</string>
    <string name="get_location">Locate me</string>
    <string name="main_screen">Start</string>
    <string name="update_freq">Update time in minutes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
